# PROGRAMMING-5-SEM

./: README.md
Лабораторная работа 1/: README.md
Лабораторная работа 1/other-src/rootserver/: activation_script.py  myremotemodule.py
Лабораторная работа 1/src/other-project/: main.py
Лабораторная работа 1/src/printHelloWorldDir/: __init__.py  printHelloWorld.py  setup.py
Лабораторная работа 1/src/printHelloWorldDir/printHelloWorld.egg-info/: PKG-INFO  SOURCES.txt
Лабораторная работа 2/: README.md  __main__.py  main.py  pyproject.toml
Лабораторная работа 2/src/: __init__.py  get_the_weather.py
Лабораторная работа 4/: README.md  pyproject.toml
Лабораторная работа 4/Zadanie_1/: gen_fib.py  test_zadanie_1.py
Лабораторная работа 4/Zadanie_2/: even_numbers_iterator.py  test_zadanie_2.py
Лабораторная работа 5/: README.md  __main__.py  pyproject.toml
Лабораторная работа 6/: README.md  __main__.py  pyproject.toml
Лабораторная работа 8/: README.md  __main__.py  pyproject.toml
Лабораторная работа 8/src/: __init__.py  get_the_weather.py  plot_graph.py
Лабораторная работа 8/utils/: __init__.py  get_the_weather.py  plot_graph.py
