[tool.poetry]
name = "лабораторная работа 6"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
