[tool.poetry]
name = "лабораторная работа 8"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
